@@ -539,7 +539,7 @@ world.loc.Plains.Nomads.Tent.events.push(new Link(
 		party.inventory.AddItem(Items.InfernumPlus);
 		
 		party.inventory.AddItem(Items.Hummus);
-		party.inventory.AddItem(Items.BloodVial);
+		party.inventory.AddItem(Items.Letter);
 		party.inventory.AddItem(Items.SpringWater);
 		party.inventory.AddItem(Items.Homos);
 		
