@@ -15,6 +15,7 @@ Version 0.3q
 * You need some ingredients to make the Homos item first though.
  - Spring water can be found in the forest.
  - Hummus can be bought from Patchwork (and sometimes Cale).
+ - Letter can be found in a Rigard event.
 
 --------------------------------------------
              PREVIOUS VERSIONS
